# openjazz2

./: .gitignore  CMakeLists.txt  README.md  build.zig
archive_cpp/src/: main.cpp
archive_cpp/src/data/: AnimationHelper.h  JJ2LevelBuilder.cpp  Jazz2AnimFormat.cpp  Jazz2TileFormat.cpp
archive_cpp/src/game/: Camera.h  Event.h  IStoryBoard.h  Level.cpp  Level.h  WorldTransformations.h
archive_cpp/src/utils/: Math.h  MicroLogger.h  Mpl.h
cpp/src/: App.cpp  App.h  winMain.cpp
cpp/src/data/: JJ2HeroAnimMap.h  JJ2LevelBuilder.h  Jazz2AnimFormat.h  Jazz2LevelFormat.h  Jazz2TileFormat.h  ResourceFactory.cpp  ResourceFactory.h
src/: .gitignore  CollisionEngine.cpp  CollisionEngine.h  README.md  app.zig  assets.zig  assets_maps.zig  assets_reader.zig  build.zig  build.zig.zon  collision.zig  console.zig  ctx.zig  diag_animset.zig  diag_level.zig  diag_sound.zig  diag_tileset.zig  enemy.zig  g_anim.zig  g_math.zig  game.zig  level_view.zig  license_template.txt.txt  main.zig  player.zig  sound.zig  unixMain.cpp
src/data/: AnimationHelper.cpp  JJ2LevelBuilder.cpp  Jazz2LevelFormat.cpp  ResourceFactory.cpp
src/game/: Camera.cpp  Event.cpp  Game.cpp  Hero.cpp  Layer.cpp  Layer.h  Level.cpp  ResourceDbg.cpp  WorldTransformations.cpp  WorldTransformations.h
src/gfx/: Animation.cpp  Animation.h  GraphicsEngine.cpp  GraphicsEngine.h  Surface.h  fps.zig  gfx.zig  root.zig  system.zig
src/src/: app.zig  assets.zig  assets_maps.zig  assets_reader.zig  collision.zig  console.zig  ctx.zig  diag_animset.zig  diag_gfx.zig  diag_level.zig  diag_sound.zig  diag_tileset.zig  easy_bit.zig  g_anim.zig  g_math.zig  game.zig  gfx.zig  level_view.zig  main.zig  player.zig  trash.zig  utils.zig
src/utils/: BinaryReader.h  GameConsoleWriter.cpp  Utils.cpp  Utils.h  easy_bit.zig  fs.zig  root.zig  utils.zig
(+50 files in other folders)
